# CAlgo

./: .gitignore  CMakeLists.txt  README.md
googletest/googletest/: CMakeLists.txt
include/: bst.h  calgo_clazz.h  calgo_list.h  calgo_public.h  calgo_set.h  calgo_string.h  calgo_vector.h  new.h  object.h  public.h  set.h
lib/googletest/: CMakeLists.txt
lib/googletest/googlemock/: CMakeLists.txt
script/: buildcov.sh  runtest.sh
src/: calgo_clazz.c  calgo_list.c  calgo_public.c  calgo_set.c  calgo_string.c  calgo_vector.c  set.c
test/: CMakeLists.txt  test_bst.cpp  test_calg_set.cpp  test_calgo_string.cpp  test_calgo_vector.cpp  test_list.cpp  test_set.cpp
